Fix: GNU-ld: ARM: Issues when trying to set target output architecture

PR 28910
  * lexsup.c (ld_options): Require that the --architecture option is given exactly two dashes, so that it does not become confused with the -a option.